desig_responsivo_vercel_test_2

--- a/src/TooDoList.css
+++ b/src/TooDoList.css
@@ -53,7 +53,7 @@ body {
   cursor: pointer;
   width: 100%;
   margin-left: 0;
-  justify-content: center;
+  align-self: center;
 }
 
 #secundaria button:hover {
